<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_routine_category">

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/ic_exam"
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_change_exam"
            app:summary="@string/settings_summary_change_exam"
            app:title="@string/settings_title_change_exam" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_app_category">

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/ic_rate_it"
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_rate_it"
            app:summary="@string/settings_summary_rate_it"
            app:title="@string/settings_title_rate_it" />

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/ic_share_the_app"
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_share_the_app"
            app:summary="@string/settings_summary_share_the_app"
            app:title="@string/settings_title_share_the_app" />

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/ic_feedback"
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_give_feedback"
            app:summary="@string/settings_summary_give_feedback"
            app:title="@string/settings_title_give_feedback" />

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/ic_privacy_policy"
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_privacy_policy"
            app:summary="@string/settings_summary_privacy_policy"
            app:title="@string/settings_title_privacy_policy">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_privacy_policy_url" />

        </Preference>

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:icon="@drawable/ic_about"
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_about"
            app:selectable="false"
            app:summary="@string/settings_summary_about"
            app:title="@string/settings_title_about" />

        <Preference
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="true"
            app:key="@string/settings_key_version"
            app:selectable="false"
            app:summary="@string/app_version_name"
            app:title="@string/settings_title_version" />

    </PreferenceCategory>

</PreferenceScreen>