<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_routine" />
        <item
            android:id="@+id/nav_change_exam_type"
            android:title="@string/nav_change_exam_type" />
        <item
            android:id="@+id/nav_rate_it"
            android:title="@string/nav_rate_it" />
        <item
            android:id="@+id/nav_share_the_app"
            android:title="@string/nav_share_the_app" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/nav_privacy_policy" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" />
    </group>

</menu>